--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "@angular/router": "~8.1.2",
     "@ckeditor/ckeditor5-angular": "^1.1.2",
     "@ckeditor/ckeditor5-build-classic": "^15.0.0",
+    "angular-bootstrap-md": "^8.6.0",
+    "chart.js": "^2.5.0",
+    "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
